[package]
name = "callisto"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
winit = { version = "0.30", features = ["android-native-activity"] }
env_logger = "0.10"
log = "0.4"
wgpu = { version = "28.0", features = ["gles"] }
pollster = "0.3"
rand = "0.10.0"
bytemuck = { version = "1.24", features = [ "derive" ] }
cgmath = "0.18.0"
dot_vox = "5.2.0"
